plugins {
    id 'org.springframework.boot' version '2.7.1'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'com.kwt'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'
targetCompatibility = '11'

        repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    runtimeOnly 'com.h2database:h2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // https://mvnrepository.com/artifact/org.webjars/webjars-locator
    implementation group: 'org.webjars', name: 'webjars-locator', version: '0.45'

    // https://mvnrepository.com/artifact/org.webjars/jquery
    implementation group: 'org.webjars', name: 'jquery', version: '3.6.0'

    // https://mvnrepository.com/artifact/org.webjars/bootstrap
    implementation group: 'org.webjars', name: 'bootstrap', version: '5.1.3'

    // https://mvnrepository.com/artifact/org.webjars/font-awesome
    implementation group: 'org.webjars', name: 'font-awesome', version: '6.1.1'

    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'

    // Open API
    implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'

    // https://mvnrepository.com/artifact/org.projectlombok/lombok
    // https://projectlombok.org/setup/gradle
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'

    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'

    /*
     * To stop getting this WARNING use classgraph:4.8.149 and not version 4.8.139 that comes with one of the above dependencies
     *
     * WARNING: An illegal reflective access operation has occurred
     * WARNING: Illegal reflective access by nonapi.io.github.classgraph.classpath.CallStackReader (file:/home/kwok-wai/.gradle/caches/modules-2/files-2.1/io.github.classgraph/classgraph/4.8.139/6932809e00eb69b2321bd3c35e7b61e964714996/classgraph-4.8.139.jar) to method java.lang.SecurityManager.getClassContext()
     * WARNING: Please consider reporting this to the maintainers of nonapi.io.github.classgraph.classpath.CallStackReader
     * WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
     * WARNING: All illegal access operations will be denied in a future release
     */

    // https://mvnrepository.com/artifact/io.github.classgraph/classgraph
    implementation 'io.github.classgraph:classgraph:4.8.149'

    // https://mvnrepository.com/artifact/org.modelmapper/modelmapper
    implementation 'org.modelmapper:modelmapper:3.1.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
